--- a/snippets/shipping-calculator.liquid
+++ b/snippets/shipping-calculator.liquid
@@ -186,6 +186,7 @@
         });
     });
 
+    // Dien
     // Highlight zip field on zip error
     jQuery(function highlightZipFieldOnError() {
         var zipEl  = jQuery('#address_zip');
