--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -43,8 +43,13 @@
       // Dien
       Shopify.Cart.GiftWrap.count = function() {
           var itemsInCart = 0;
+          {% if settings.show_cart_drawer %}
+              {% assign cart_item_classname = 'cart-drawer__item-quantity' %}
+          {% else %}
+              {% assign cart_item_classname = 'cart-item__qty-input' %}
+          {% endif %}
           // Count total qty in cart for items that are not the gift wrap product
-          $('input.cart-item__qty-input').each(function countItems() {
+          $('input.{{ cart_item_classname }}').each(function countItems() {
               console.log($(this).attr('id'));
               // If gift-wrap product is in cart, then don't count its quantity
               if ('{{ gift_wraps_in_cart_key | default: "" }}' && $(this).attr('id').includes('{{ gift_wraps_in_cart_key }}')) {
@@ -58,11 +63,12 @@
           return itemsInCart;
       };
 
-      // Dien modified
+      // Dien
+      // Parameterized the function
       Shopify.Cart.GiftWrap.set = function(numItems, callback) {
-          function setSuccess() { location.href = '/cart'; }
+          function defaultSuccess() { location.href = '/cart'; }
+          var done = (typeof callback === 'function') ? callback : defaultSuccess;
           var itemsInCart = numItems || {{ items_in_cart }};
-          var done = (typeof callback === 'function') ? callback : setSuccess;
           jQuery.ajax({
               type: 'POST',
               url: '/cart/update.js',
@@ -72,13 +78,17 @@
           });
       };
 
-      Shopify.Cart.GiftWrap.remove = function() {
+      // Dien
+      // Parameterized the function
+      Shopify.Cart.GiftWrap.remove = function(callback) {
+          function defaultSuccess() { location.href = '/cart'; }
+          var done = (typeof callback === 'function') ? callback : defaultSuccess;
           jQuery.ajax({
               type: 'POST',
               url: '/cart/update.js',
               data: { updates: { {{ id }}: 0 }, attributes: { 'gift-wrapping': '' } },
           dataType: 'json',
-          success: function() { location.href = '/cart'; }
+          success: done
           });
       };
 
@@ -112,13 +122,28 @@
       // When you then check the GW checkbox again, the cart will refresh and show the GW product reflecting the old total qty.
       // Now, we have the qty of GW product !== current total qty of products. This will trigger another cart refresh due to
       // the checks from the above if/elsif/endif block.
+      // The change consists of performing a recount of total qty of items before setting the GW qty.
       jQuery(function() {
+          var setCallback = null;
+          var removeCallback = null;
+          // If cart drawer enabled, prevent set() and remove() from loading /cart page.
+          if ('{{ settings.show_cart_drawer | default: "false" }}' === 'true') {
+          // TODO to be continued... callback should be to add or remove gift wrapping line item from the DOM
+              setCallback = function addGWItemToDOM() {
+
+              };
+
+              removeCallback = function removeGWItemfromDOM() {
+                  console.log('Removing GW Item: ' + '#' + $.escapeSelector('{{ gift_wraps_in_cart_key }}') + 'button.cart-drawer__item-delete');
+                  jQuery('#' + $.escapeSelector('{{ gift_wraps_in_cart_key }}') + 'button.cart-drawer__item-delete').trigger('click');
+              };
+          }
           jQuery('[name="attributes\[gift-wrapping\]"]').change(function checkboxCb() {
               if (jQuery(this).is(':checked')) {
-                  Shopify.Cart.GiftWrap.set(Shopify.Cart.GiftWrap.count());
+                  Shopify.Cart.GiftWrap.set(Shopify.Cart.GiftWrap.count(), setCallback);
               }
               else {
-                  Shopify.Cart.GiftWrap.remove();
+                  Shopify.Cart.GiftWrap.remove(removeCallback);
               }
           });
       });
@@ -126,11 +151,19 @@
       // Dien
       // Auto-refreshes qty of gift wrap product when qty of other products in cart changes
       jQuery(function() {
+          {% if settings.show_cart_drawer %}
+              {% assign cart_container_selector = 'div.cart-drawer__item-list' %}
+              {% assign cart_item_classname = 'cart-drawer__item-quantity' %}
+          {% else %}
+              {% assign cart_container_selector = 'table.cart__table' %}
+              {% assign cart_item_classname = 'cart-item__qty-input' %}
+          {% endif %}
+
           // Cannot disable gift-wrap input due to bug in Narrative theme, which clones attributes to other line items.
           //$('#quantity_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).prop("disabled", true);
           //$('#updates_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).prop("disabled", true);
-          $('table.cart__table').on('change', 'input.cart-item__qty-input', function recalcGiftWrap() {
-              if ($('input#gift-wrapping').prop("checked")) {
+          $('{{ cart_container_selector }}').on('change', 'input.{{ cart_item_classname }}', function recalcGiftWrap() {
+              if ($('#gift-wrapping').prop("checked")) {
                   var itemsInCart = Shopify.Cart.GiftWrap.count();
 
                   // Update gift wrap quantity to match total items quantity
