Implemented: checking gift-wrap checkbox adds GW line item to Cart Drawer

--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -16,6 +16,8 @@
       <label style="display:block" for="gift-note">Gift message (free and optional):</label>
       <textarea name="attributes[gift-note]" id="gift-note">{{ cart.attributes.gift-note }}</textarea>
     </p>
+      <!-- DIEN TEMP -->
+      <a href="{{ linklists.gift-wrapping.links[1].url }}"> {{ linklists.gift-wrapping.links[1].url }} </a>
   </div>
 
   {% assign id = linklists.gift-wrapping.links.first.object.variants.first.id %}
@@ -128,9 +130,28 @@
           var removeCallback = null;
           // If cart drawer enabled, prevent set() and remove() from loading /cart page.
           if ('{{ settings.show_cart_drawer | default: "false" }}' === 'true') {
-              // TODO to be continued... callback should be to add or remove gift wrapping line item from the DOM
+              // TODO to be continued... callback should be to add or remove gift wrapping line item to/from the DOM
               setCallback = function addGWItemToDOM() {
-
+                  // Retrieve Gift Wrap Stub page which contains the generated HTML
+                  // for the Gift Wrap line item for the Cart Drawer
+                  jQuery.ajax({
+                      url: '{{ linklists.gift-wrapping.links[1].url }}',
+                      dataType: "html"
+                  })
+                  .done(function insertGWItemtoCartDrawer(htmlStr) {
+                      var stubHTML = jQuery(htmlStr);
+                      var gWLineItem = stubHTML[0];
+                      var newSubtotalSpan = stubHTML[1];
+                      var newTotalDiscountSpan = stubHTML[2];
+//                      console.log(htmlStr);
+                      console.log(stubHTML);
+//                      console.log(gWLineItem);
+//                      console.log(newSubtotalSpan);
+                      console.log(newTotalDiscountSpan);
+                      jQuery('div.cart-drawer__item-list').prepend(gWLineItem);
+                      jQuery('span.cart-drawer__subtotal-number').text(newSubtotalSpan.innerText);
+                      jQuery('span[data-cart-total-discount]').text(newTotalDiscountSpan.innerText);
+                  });
               };
 
               removeCallback = function removeGWItemfromDOM() {
