--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -35,13 +35,32 @@
   </style>
 
   <script>
-
       Shopify.Cart = Shopify.Cart || {};
 
       Shopify.Cart.GiftWrap = {};
 
       // Dien
-      Shopify.Cart.GiftWrap.count = function() {
+      var giftWrapKeyStr = '{{ gift_wraps_in_cart_key | default: "" }}';
+
+      Shopify.Cart.ObserverItemList = new MutationObserver(function observeItemList(mutations) {
+          var changed = mutations.some(function inspectMutation(m) {
+              if (m.type === 'childList') {
+                  // If nodes where added/removed to target, i.e. cart drawer's item list
+                  if (m.addedNodes.length || m.removedNodes.length) {
+                      if (m.target === document.querySelector('div.cart-drawer__item-list')) {
+                          return true;
+                      }
+                  }
+              }
+              return false;
+          });
+
+          if (changed) {
+              Shopify.Cart.GiftWrap.updateGiftWrapCount();
+          }
+      });
+
+      Shopify.Cart.GiftWrap.count = function () {
           var itemsInCart = 0;
           {% if settings.show_cart_drawer %}
               {% assign cart_item_classname = 'cart-drawer__item-quantity' %}
@@ -52,7 +71,7 @@
           $('input.{{ cart_item_classname }}').each(function countItems() {
               console.log($(this).attr('id'));
               // If gift-wrap product is in cart, then don't count its quantity
-              if ('{{ gift_wraps_in_cart_key | default: "" }}' && $(this).attr('id').includes('{{ gift_wraps_in_cart_key }}')) {
+              if (giftWrapKeyStr && $(this).attr('id').includes(giftWrapKeyStr)) {
                   console.log("gift-wrap cart key matched");
                   return;
               }
@@ -61,6 +80,16 @@
           });
 
           return itemsInCart;
+      };
+
+      Shopify.Cart.GiftWrap.updateGiftWrapCount = function () {
+          var itemsInCart = Shopify.Cart.GiftWrap.count();
+
+          // Update gift wrap quantity to match total items quantity
+          // The id changes from updates_<key> to quantity_<key> after cart refresh with Theme Narrative (bug)!!!
+          jQuery('#quantity_' + $.escapeSelector(giftWrapKeyStr)).val(itemsInCart);
+          jQuery('#updates_' + $.escapeSelector(giftWrapKeyStr)).val(itemsInCart);
+          Shopify.Cart.GiftWrap.set(itemsInCart, $.noop);
       };
 
       // Dien
@@ -123,10 +152,17 @@
       // Now, we have the qty of GW product !== current total qty of products. This will trigger another cart refresh due to
       // the checks from the above if/elsif/endif block.
       // The change consists of performing a recount of total qty of items before setting the GW qty.
+      {% if settings.show_cart_drawer %}
+        {% assign cart_container_selector = 'div.cart-drawer__item-list' %}
+        {% assign cart_item_classname = 'cart-drawer__item-quantity' %}
+      {% else %}
+        {% assign cart_container_selector = 'table.cart__table' %}
+        {% assign cart_item_classname = 'cart-item__qty-input' %}
+      {% endif %}
       jQuery(function() {
           var setCallback = null;
           var removeCallback = null;
-          // If cart drawer enabled, prevent set() and remove() from loading /cart page.
+          // If cart drawer enabled, prevent set() and remove() from loading /cart page by providing them alternate callbacks
           if ('{{ settings.show_cart_drawer | default: "false" }}' === 'true') {
               setCallback = function addGWItemToDOM() {
                   // Retrieves "Gift Wrap Stub" page from the "Gift Wrapping" menu.
@@ -141,6 +177,10 @@
                       var gWLineItem = stubHTML[0];
                       var newSubtotalSpan = stubHTML[1];
                       var newTotalDiscountSpan = stubHTML[2];
+
+                      // Save gift wrap cart item key
+                      giftWrapKeyStr = gWLineItem.id;
+
                       jQuery('div.cart-drawer__item-list').prepend(gWLineItem);
                       jQuery('span.cart-drawer__subtotal-number').text(newSubtotalSpan.innerText);
                       jQuery('span[data-cart-total-discount]').text(newTotalDiscountSpan.innerText);
@@ -148,48 +188,41 @@
               };
 
               removeCallback = function removeGWItemfromDOM() {
-                  console.log('Removing GW Item: ' + '#' + $.escapeSelector('{{ gift_wraps_in_cart_key }}') + ' button.cart-drawer__item-delete');
-                  jQuery('#' + $.escapeSelector('{{ gift_wraps_in_cart_key }}') + ' button.cart-drawer__item-delete').trigger('click');
+                  console.log('Removing GW Item: ' + '#' + $.escapeSelector(giftWrapKeyStr) + ' button.cart-drawer__item-delete');
+                  jQuery('#' + $.escapeSelector(giftWrapKeyStr) + ' button.cart-drawer__item-delete').trigger('click');
               };
           }
+          function recalcGiftWrap() {
+              if ($('#gift-wrapping').prop("checked")) {
+                  Shopify.Cart.GiftWrap.updateGiftWrapCount();
+              }
+          }
+
+          var target = document.querySelector('div.cart-drawer__item-list');
+          var config = { childList: true };
+          if ($('#gift-wrapping').prop("checked")) {
+              // Activate observer for cart's item removal or addition, enabling auto-refresh of GW qty
+              Shopify.Cart.ObserverItemList.observe(target, config);
+              // Activate listener for qty input element change of each item, enabling auto-refresh of GW qty
+              jQuery('{{ cart_container_selector }}').on('change.updateGiftWrapCount', 'input.{{ cart_item_classname }}', recalcGiftWrap);
+          }
+
           jQuery('[name="attributes\[gift-wrapping\]"]').change(function checkboxCb() {
               if (jQuery(this).is(':checked')) {
                   Shopify.Cart.GiftWrap.set(Shopify.Cart.GiftWrap.count(), setCallback);
+                  Shopify.Cart.ObserverItemList.observe(target, config);
+                  jQuery('{{ cart_container_selector }}').on('change.updateGiftWrapCount', 'input.{{ cart_item_classname }}', recalcGiftWrap);
               }
               else {
                   Shopify.Cart.GiftWrap.remove(removeCallback);
+                  Shopify.Cart.ObserverItemList.disconnect();
+                  jQuery('{{ cart_container_selector }}').off('change.updateGiftWrapCount', 'input.{{ cart_item_classname }}', recalcGiftWrap);
               }
           });
       });
 
-      // Dien
-      // Auto-refreshes qty of gift wrap product when qty of other products in cart changes
-      // TODO: Need to fix cases where this doesn't work for Cart Drawer
       // TODO: To Fix: Gift message does not persist in Cart Drawer
-      jQuery(function() {
-          {% if settings.show_cart_drawer %}
-              {% assign cart_container_selector = 'div.cart-drawer__item-list' %}
-              {% assign cart_item_classname = 'cart-drawer__item-quantity' %}
-          {% else %}
-              {% assign cart_container_selector = 'table.cart__table' %}
-              {% assign cart_item_classname = 'cart-item__qty-input' %}
-          {% endif %}
 
-          // Cannot disable gift-wrap input due to bug in Narrative theme, which clones attributes to other line items.
-          //$('#quantity_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).prop("disabled", true);
-          //$('#updates_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).prop("disabled", true);
-          $('{{ cart_container_selector }}').on('change', 'input.{{ cart_item_classname }}', function recalcGiftWrap() {
-              if ($('#gift-wrapping').prop("checked")) {
-                  var itemsInCart = Shopify.Cart.GiftWrap.count();
-
-                  // Update gift wrap quantity to match total items quantity
-                  // The id changes from updates_<key> to quantity_<key> after cart refresh with Theme Narrative!!!
-                  $('#quantity_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).val(itemsInCart);
-                  $('#updates_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).val(itemsInCart);
-                  Shopify.Cart.GiftWrap.set(itemsInCart, $.noop);
-              }
-          });
-      });
   </script>
 
 {% else %}
