--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -24,11 +24,27 @@
   {% for item in cart.items %}
     {% if item.id == id %}
       {% assign gift_wraps_in_cart = item.quantity %}
-      <!-- Dien -->
+      <!-- DIEN -->
       {% assign gift_wraps_in_cart_key = item.key %}
     {% endif %}
   {% endfor %}
   {% assign items_in_cart = cart.item_count | minus: gift_wraps_in_cart %}
+
+  <!-- DIEN -->
+  {% assign gift_wrap_checkbox_id = 'gift-wrapping' %}
+  {% if settings.show_cart_drawer %}
+    {% assign cart_container_selector = 'div.cart-drawer__item-list' %}
+    {% assign cart_item_class = 'cart-drawer__item-quantity' %}
+    {% assign cart_subtotal_selector = 'span.cart-drawer__subtotal-number' %}
+    {% assign cart_discount_selector = 'span[data-cart-total-discount]' %}
+    {% assign cart_remove_btn_selector = 'button.cart-drawer__item-delete' %}
+  {% else %}
+    {% assign cart_container_selector = 'table.cart__table' %}
+    {% assign cart_item_class = 'cart-item__qty-input' %}
+    {% assign cart_subtotal_selector = 'span.cart-footer__subtotal' %}
+    {% assign cart_discount_selector = '' %}
+    {% assign cart_remove_btn_selector = 'a.cart-item__remove' %}
+  {% endif %}
 
   <style>
     #updates_{{ id }} { display: none; }
@@ -41,6 +57,7 @@
 
       // Dien
       var giftWrapKeyStr = '{{ gift_wraps_in_cart_key | default: "" }}';
+      var giftWrapKeyEscapedStr = $.escapeSelector(giftWrapKeyStr);
 
       // Observer to monitor nodes addition/removal in cart drawer's item list
       // and update the GW count accordingly
@@ -48,7 +65,7 @@
           var changed = mutations.some(function inspectMutation(m) {
               if (m.type === 'childList') {
                   if (m.addedNodes.length || m.removedNodes.length) {
-                      if (m.target === document.querySelector('div.cart-drawer__item-list')) {
+                      if (m.target === document.querySelector('{{ cart_container_selector }}')) {
                           return true;
                       }
                   }
@@ -63,13 +80,8 @@
 
       Shopify.Cart.GiftWrap.count = function () {
           var itemsInCart = 0;
-          {% if settings.show_cart_drawer %}
-              {% assign cart_item_classname = 'cart-drawer__item-quantity' %}
-          {% else %}
-              {% assign cart_item_classname = 'cart-item__qty-input' %}
-          {% endif %}
           // Count total qty in cart for items that are not the gift wrap product
-          $('input.{{ cart_item_classname }}').each(function countItems() {
+          $('input.{{ cart_item_class }}').each(function countItems() {
               console.log("this.id -> " + this.id);
               // If gift-wrap product is in cart, then don't count its quantity
               if (giftWrapKeyStr && this.id.includes(giftWrapKeyStr)) {
@@ -88,8 +100,8 @@
 
           // Update gift wrap quantity to match total items quantity
           // The id changes from updates_<key> to quantity_<key> after cart refresh with Theme Narrative (bug)!!!
-          jQuery('#quantity_' + $.escapeSelector(giftWrapKeyStr)).val(itemsInCart);
-          jQuery('#updates_' + $.escapeSelector(giftWrapKeyStr)).val(itemsInCart);
+          jQuery('#quantity_' + giftWrapKeyEscapedStr).val(itemsInCart);
+          jQuery('#updates_' + giftWrapKeyEscapedStr).val(itemsInCart);
           Shopify.Cart.GiftWrap.set(itemsInCart, $.noop);
       };
 
@@ -153,13 +165,6 @@
       // Now, we have the qty of GW product !== current total qty of products. This will trigger another cart refresh due to
       // the checks from the above if/elsif/endif block.
       // The change consists of performing a recount of total qty of items before setting the GW qty.
-      {% if settings.show_cart_drawer %}
-        {% assign cart_container_selector = 'div.cart-drawer__item-list' %}
-        {% assign cart_item_classname = 'cart-drawer__item-quantity' %}
-      {% else %}
-        {% assign cart_container_selector = 'table.cart__table' %}
-        {% assign cart_item_classname = 'cart-item__qty-input' %}
-      {% endif %}
       jQuery(function() {
           var setGiftWrapCb = null;
           var removeGiftWrapCb = null;
@@ -181,61 +186,78 @@
 
                       // Save gift wrap cart item key
                       giftWrapKeyStr = giftWrapLineItem.id;
+                      giftWrapKeyEscapedStr = $.escapeSelector(giftWrapKeyStr);
 
                       // Add GW item to Cart Drawer in DOM
-                      jQuery('div.cart-drawer__item-list').prepend(giftWrapLineItem);
+                      jQuery('{{ cart_container_selector }}').prepend(giftWrapLineItem);
 
                       // Update total and discount values in DOM
-                      jQuery('span.cart-drawer__subtotal-number').text(newSubtotalSpan.innerText);
-                      jQuery('span[data-cart-total-discount]').text(newTotalDiscountSpan.innerText);
+                      jQuery('{{ cart_subtotal_selector }}').text(newSubtotalSpan.innerText);
+                      jQuery('{{ cart_discount_selector }}').text(newTotalDiscountSpan.innerText);
+
+                      attachObservers();
                   });
               };
 
               removeGiftWrapCb = function removeGWItemfromDOM() {
-                 jQuery('#' + $.escapeSelector(giftWrapKeyStr) + ' button.cart-drawer__item-delete').trigger('click');
+                 jQuery('#' + giftWrapKeyEscapedStr + ' {{ cart_remove_btn_selector }}').trigger('click');
                  giftWrapKeyStr = '';
+                 giftWrapKeyEscapedStr = '';
               };
           }
 
           function recalcGiftWrap() {
-              if (jQuery('#gift-wrapping').prop("checked")) {
+              if (jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked')) {
                   Shopify.Cart.GiftWrap.updateGiftWrapCount();
               }
           }
 
-          var target = document.querySelector('div.cart-drawer__item-list');
-          var config = { childList: true };
-          if ($('#gift-wrapping').prop("checked")) {
-              // Activate observer for cart's item removal or addition, enabling auto-refresh of GW qty
-              Shopify.Cart.ObserverItemList.observe(target, config);
-              // Activate listener for qty input element change of each item, enabling auto-refresh of GW qty
-              jQuery('{{ cart_container_selector }}').on('change.updateGiftWrapCount', 'input.{{ cart_item_classname }}', recalcGiftWrap);
+          function removeGWBtnHandler() {
+              removeObservers();
+              // Note: this does NOT trigger the "change" event on the GW checkbox
+              jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked', false);
+              Shopify.Cart.GiftWrap.remove(removeGiftWrapCb);
           }
 
-          jQuery('#gift-wrapping').change(function checkboxCb() {
+          // Attention: Call this only when GW item is indeed present in the Cart
+          // since it attaches a listener directly to the GW item's remove button
+          function attachObservers() {
+              console.log('Attaching observers...');
+              var target = document.querySelector('{{ cart_container_selector }}');
+              var config = { childList: true };
+              // Activate observer for cart's item removal or addition, enabling auto-refresh of GW qty
+              Shopify.Cart.ObserverItemList.observe(target, config);
+              // Attach listener for qty input element change of each item, enabling auto-refresh of GW qty
+              jQuery('{{ cart_container_selector }}').on('change.updateGiftWrapCount', 'input.{{ cart_item_class }}', recalcGiftWrap);
+              // Attach listener to Gift Wrap item's remove button
+              jQuery('#' + giftWrapKeyEscapedStr).on('click.removeGWLineItem', '{{ cart_remove_btn_selector }}', removeGWBtnHandler);
+          }
+
+          function removeObservers() {
+              console.log('Removing observers...');
+              Shopify.Cart.ObserverItemList.disconnect();
+              jQuery('{{ cart_container_selector }}').off('change.updateGiftWrapCount', 'input.{{ cart_item_class }}', recalcGiftWrap);
+              jQuery('#' + giftWrapKeyEscapedStr).off('click.removeGWLineItem', '{{ cart_remove_btn_selector }}', removeGWBtnHandler);
+          }
+
+          if (jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked')) {
+              Shopify.Cart.GiftWrap.updateGiftWrapCount();
+              attachObservers();
+          }
+
+          jQuery('#{{ gift_wrap_checkbox_id }}').change(function checkboxCb() {
               if (jQuery(this).is(':checked')) {
                   Shopify.Cart.GiftWrap.set(Shopify.Cart.GiftWrap.count(), setGiftWrapCb);
-
-                  // Activates related observer and listener
-                  Shopify.Cart.ObserverItemList.observe(target, config);
-                  jQuery('{{ cart_container_selector }}').on('change.updateGiftWrapCount', 'input.{{ cart_item_classname }}', recalcGiftWrap);
-
-                  jQuery('{{ cart_container_selector }}').on('click.removeGWLineItem', 'button.cart-drawer__item-delete', function removeBtnHandler() {
-                      if (this.id.includes(giftWrapKeyStr)) {
-                          // to be continued...
-                      }
-                  });
               }
               else {
-                  Shopify.Cart.ObserverItemList.disconnect();
-                  jQuery('{{ cart_container_selector }}').off('change.updateGiftWrapCount', 'input.{{ cart_item_classname }}', recalcGiftWrap);
+                  removeObservers();
                   Shopify.Cart.GiftWrap.remove(removeGiftWrapCb);
               }
           });
       });
 
       // TODO: To Fix: Gift message does not persist in Cart Drawer
-
+      // TODO: GW per item and single fee
   </script>
 
 {% else %}
